# reconcile-test

./: .gitignore  AGENTS.md  AI-WORKFLOW.md  CLAUDE.md  DE_BAI.md  README.md  docker-compose.yml  income.csv  orders.csv
.claude/agents/: bug-hunter.md  correctness-reviewer.md  edge-case-hunter.md
.claude/skills/advanced-elicitation/: SKILL.md  methods.csv
.claude/skills/dev-story/: SKILL.md
.github/: ci.yml.example
_bmad-output/implementation-artifacts/: 1-1-reconciliation-dashboard.md  1-1-validation-report.md  1-2-export-excel.md  1-2-validation-report.md  1-3-multi-platform.md  1-3-validation-report.md  1-4-ui-ux-polish.md  1-4-validation-report.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics-01-reconciliation.md
_bmad-output/project-context/: index.md  technology-stack-versions.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  errors.py  main.py
backend/app/api/: reconciliation.py
backend/app/domain/reconciliation/: logic.py  models.py
backend/app/exports/: reconciliation_export.py
backend/app/loaders/: csv_loader.py
backend/app/repositories/: reconciliation_repo.py
backend/migrations/: 00001_create_orders.sql  00002_create_income_settlements.sql
backend/scripts/: seed.py
backend/tests/: test_export.py  test_multi_platform.py  test_reconciliation_logic.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DataBadge.tsx
frontend/lib/: api.ts  money.ts  status.ts  types.ts  uimap.ts
(+14 files in other folders)
